@@ -11,7 +11,6 @@ CfgVars["starverate"] = 3      --How much health is taken away per second when s
 CfgVars["hungerspeed"] = 1       --How much energy should deteriate every second
 CfgVars["foodcost"] = 15       --Cost of food
 CfgVars["foodpay"] = 1     --Whether there's a special spawning price for food
-CfgVars["foodspawn"] = 1       --If players can spawn food props or not
 
 concommand.Add("rp_hungerspeed", function(ply, cmd, args)
 	if not ply:IsAdmin() then ply:ChatPrint("You're not an admin") return end
@@ -19,8 +18,8 @@ concommand.Add("rp_hungerspeed", function(ply, cmd, args)
 	CfgVars["hungerspeed"] = tonumber(args[1]) / 10
 end)
 
-function AddFoodItem(mdl, amount)
-	table.insert(FoodItems, { model = mdl, amount = amount })
+function AddFoodItem(name, mdl, amount)
+	FoodItems[name] = { model = mdl, amount = amount }
 end
 
 function HM.PlayerSpawn(ply)
@@ -31,7 +30,7 @@ hook.Add("PlayerSpawn", "HM.PlayerSpawn", HM.PlayerSpawn)
 function HM.PlayerSpawnProp(ply, model)
 	for k, v in pairs(FoodItems) do
 		if v.model == model then
-			if CfgVars["foodspawn"] == 0 then return false end
+			if GetGlobalInt("foodspawn") == 0 and ply:Team() ~= TEAM_COOK then return false end
 
 			if GetGlobalInt("hungermod") == 1 and CfgVars["foodpay"] == 1 then
 				if not GAMEMODE.BaseClass:PlayerSpawnProp(ply, model) then return false end
@@ -40,7 +39,7 @@ function HM.PlayerSpawnProp(ply, model)
 
 				if (CfgVars["allowedprops"] == 0 and CfgVars["banprops"] == 0) or ply:HasPriv(ADMIN) then allowed = true end
 
-			if CfgVars["propspawning"] == 0 then return false end
+				if CfgVars["propspawning"] == 0 then return false end
 
 				if CfgVars["allowedprops"] == 1 then
 					for n, m in pairs(AllowedProps) do
@@ -62,6 +61,7 @@ function HM.PlayerSpawnProp(ply, model)
 					Notify(ply, 1, 4, "Need " .. math.floor(cost) .. " bucks!")
 					return false
 				end
+				Notify(ply, 1, 4, "You bought a "..k)
 				return true
 			end
 		end
@@ -97,10 +97,11 @@ function HM.KeyPress(ply, code)
 			tr.Entity:Remove()
 		else
 			for k, v in pairs(FoodItems) do
-				if v.model == tr.Entity:GetModel() then
-					tr.Entity:GetTable().FoodItem = 1
-					tr.Entity:GetTable().FoodEnergy = v.amount
-					HM.KeyPress(ply, code)
+				if string.lower(v.model) == string.lower(tr.Entity:GetModel()) then
+					ply:SetNWInt("Energy", math.Clamp(ply:GetNWInt("Energy") + v.amount, 0, 100))
+					umsg.Start("AteFoodIcon")
+					umsg.End()
+					tr.Entity:Remove()
 				end
 			end
 		end
@@ -137,8 +138,8 @@ AddHelpCategory(HELP_CATEGORY_HUNGERMOD, "HungerMod - Rick Darkaliono")
 AddToggleCommand("rp_hungermod", "hungermod", true)
 AddHelpLabel(-1, HELP_CATEGORY_HUNGERMOD, "rp_hungermod <1 or 0> - Enable/disable hunger mod")
 
-AddToggleCommand("rp_spawnfood", "foodspawn", false)
-AddHelpLabel(-1, HELP_CATEGORY_HUNGERMOD, "rp_spawnfood <1 or 0> - Enable/disable whether players can spawn food props")
+AddToggleCommand("rp_foodspawn", "foodspawn", true)
+AddHelpLabel(-1, HELP_CATEGORY_ADMINTOGGLE, "rp_foodspawn - Whether players(non-cooks) can spawn food props or not")
 
 AddToggleCommand("rp_foodspecialcost", "foodpay", false)
 AddHelpLabel(-1, HELP_CATEGORY_HUNGERMOD, "rp_foodspecialcost <1 or 0> - Enable/disable whether spawning food props have a special cost")
@@ -153,14 +154,47 @@ AddValueCommand("rp_starverate", "starverate", false)
 AddHelpLabel(-1, HELP_CATEGORY_HUNGERMOD, "rp_starverate <Amount> - How much health that is taken away every second the player is starving  (3 is the default)")
 
 
-AddFoodItem("models/props/cs_italy/bananna.mdl", 10)
-AddFoodItem("models/props/cs_italy/bananna_bunch.mdl", 20)
-AddFoodItem("models/props_junk/watermelon01.mdl", 20)
-AddFoodItem("models/props_junk/GlassBottle01a.mdl", 20)
-AddFoodItem("models/props_junk/PopCan01a.mdl", 5)
-AddFoodItem("models/props_junk/garbage_plasticbottle003a.mdl", 15)
-AddFoodItem("models/props_junk/garbage_milkcarton002a.mdl", 20)
-AddFoodItem("models/props_junk/garbage_glassbottle001a.mdl", 10)
-AddFoodItem("models/props_junk/garbage_glassbottle002a.mdl", 10)
-AddFoodItem("models/props_junk/garbage_glassbottle003a.mdl", 10)
-AddFoodItem("models/props/cs_italy/orange.mdl", 20)
+AddFoodItem("banana", "models/props/cs_italy/bananna.mdl", 10)
+AddFoodItem("bananabunch", "models/props/cs_italy/bananna_bunch.mdl", 20)
+AddFoodItem("melon", "models/props_junk/watermelon01.mdl", 20)
+AddFoodItem("glassbottle", "models/props_junk/GlassBottle01a.mdl", 20)
+AddFoodItem("popcan", "models/props_junk/PopCan01a.mdl", 5)
+AddFoodItem("plasticbottle", "models/props_junk/garbage_plasticbottle003a.mdl", 15)
+AddFoodItem("milk", "models/props_junk/garbage_milkcarton002a.mdl", 20)
+AddFoodItem("bottle1", "models/props_junk/garbage_glassbottle001a.mdl", 10)
+AddFoodItem("bottle2", "models/props_junk/garbage_glassbottle002a.mdl", 10)
+AddFoodItem("bottle3", "models/props_junk/garbage_glassbottle003a.mdl", 10)
+AddFoodItem("orange", "models/props/cs_italy/orange.mdl", 20)
+
+function BuyFood(ply, args)
+	if args == "" then return "" end
+
+	local trace = {}
+	trace.start = ply:EyePos()
+	trace.endpos = trace.start + ply:GetAimVector() * 85
+	trace.filter = ply
+
+	local tr = util.TraceLine(trace)
+
+	if GetGlobalInt("hungermod") == 0 then
+		Notify(ply, 1, 4, "/buyfood is disabled unless Hunger Mod is enabled.")
+		return ""
+	end
+
+	if ply:Team() ~= TEAM_COOK and team.NumPlayers(TEAM_COOK) > 0 then
+		Notify(ply, 1, 4, "/buyfood is disabled because there are Cooks.")
+		return ""
+	end
+
+	for k,v in pairs(FoodItems) do
+		if string.lower(args) == k then
+			if not ply:CanAfford(CfgVars["foodcost"]) then
+				Notify(ply, 1, 4, "Can not afford this!")
+				return ""
+			end
+			ply:ConCommand("gm_spawn " .. v.model)
+		end
+	end
+	return ""
+end
+AddChatCommand("/buyfood", BuyFood)
