@@ -1,3 +1,22 @@
+-- copied from serverside
+FoodItems = { }
+function AddFoodItem(name, mdl, amount)
+	FoodItems[name] = { model = mdl, amount = amount }
+end
+
+AddFoodItem("banana", "models/props/cs_italy/bananna.mdl", 10)
+AddFoodItem("bananabunch", "models/props/cs_italy/bananna_bunch.mdl", 20)
+AddFoodItem("melon", "models/props_junk/watermelon01.mdl", 20)
+AddFoodItem("glassbottle", "models/props_junk/GlassBottle01a.mdl", 20)
+AddFoodItem("popcan", "models/props_junk/PopCan01a.mdl", 5)
+AddFoodItem("plasticbottle", "models/props_junk/garbage_plasticbottle003a.mdl", 15)
+AddFoodItem("milk", "models/props_junk/garbage_milkcarton002a.mdl", 20)
+AddFoodItem("bottle1", "models/props_junk/garbage_glassbottle001a.mdl", 10)
+AddFoodItem("bottle2", "models/props_junk/garbage_glassbottle002a.mdl", 10)
+AddFoodItem("bottle3", "models/props_junk/garbage_glassbottle003a.mdl", 10)
+AddFoodItem("orange", "models/props/cs_italy/orange.mdl", 20)
+
+
 local HM = { }
 
 FoodAteAlpha = -1
@@ -11,13 +30,13 @@ function HM.HUDPaint()
 	local x = 7
 	local y = ScrH() - 9
 
-	draw.RoundedBox(4, x - 1, y - 1, 195, 9, Color(0, 0, 0, 255))
+	draw.RoundedBox(4, x - 1, y - 1, GetConVarNumber("HudWidth") , 9, Color(0, 0, 0, 255))
 
 	if LocalPlayer():GetNWInt("Energy") > 0 then
-		draw.RoundedBox(4, x, y, 193 * (math.Clamp(LocalPlayer():GetNWInt("Energy"), 0, 100) / 100), 7, Color(30, 30, 120, 255))
-		draw.DrawText(math.ceil(LocalPlayer():GetNWInt("Energy")) .. "%", "DefaultSmall", x + 100, y - 2, Color(255, 255, 255, 255), 1)
+		draw.RoundedBox(4, x, y, GetConVarNumber("HudWidth") * (math.Clamp(LocalPlayer():GetNWInt("Energy"), 0, 100) / 100), 7, Color(30, 30, 120, 255))
+		draw.DrawText(math.ceil(LocalPlayer():GetNWInt("Energy")) .. "%", "DefaultSmall", GetConVarNumber("HudWidth") / 2, y - 2, Color(255, 255, 255, 255), 1)
 	else
-		draw.DrawText("Starving!", "ChatFont", x + 96, y - 4, Color(200, 0, 0, 255), 1)
+		draw.DrawText("Starving!", "ChatFont", GetConVarNumber("HudWidth") / 2, y - 4, Color(200, 0, 0, 255), 1)
 	end
 
 	if FoodAteAlpha > -1 then
